@@ -7,9 +7,10 @@
 #include <jack/midiport.h>
 
 enum JACKClientState {
+	JACKClientState_CLOSED,
+	JACKClientState_OPENING,
 	JACKClientState_OPEN,
-	JACKClientState_CLOSING,
-	JACKClientState_CLOSED
+	JACKClientState_CLOSING
 };
 
 class MidiSession;
@@ -22,6 +23,7 @@ public:
 
 	JACKClientState open(MidiSession *midiSession, JACKAudioStream *audioStream);
 	JACKClientState close();
+	JACKClientState start();
 	void connectToPhysicalPorts();
 	bool isRealtimeProcessing() const;
 	quint32 getSampleRate() const;
